tests/golden/type_errors/record_pattern_non_exhaustive.cd
struct Person { name: string, age: number }
let person = Person { name: "Ada", age: 36 };
print match person {
  Person { name: "Ada" } => "ada",
};
