tests/golden/type_errors/record_pattern_non_exhaustive.err
Type error at 3:7: non-exhaustive match: missing wildcard, binding, or complete record pattern
  print match person {
        ^
